--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "paths": {
+      "canvas-sketch-util": ["./node_modules/canvas-sketch-util-types"],
+      "canvas-sketch-util/*": ["./node_modules/canvas-sketch-util-types/*"]
+    }
   },
   "include": ["src"]
 }
